# gamesAI

backend/: .gitignore  Dockerfile  chess_test.py  config.py  llm_service.py  main.py  pyproject.toml
backend/chess_engine/: stockfish_engine.py
backend/games/: __init__.py  connectfour.py  tictactoe.py
backend/llm_service/: chess_lmm.py  connectfour_lmm.py
backend/models/: chess.py  connectfour.py  tictactoe.py
backend/prompts/: __init__.py  chess_analysis_instructions.py  connectfour_instructions.py  tictactoe_instructions.py
backend/routers/: chess.py  connectfour.py  tictactoe.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: ChessPage.jsx  ConnectFourPage.jsx  HomePage.jsx  TicTacToePage.jsx
frontend/src/styles/: ChessPage.css  ConnectFourPage.css  HomePage.css  TicTacToePage.css  buttons.css  index.css
